--- a/project/resources/sass/app.scss
+++ b/project/resources/sass/app.scss
@@ -77,6 +77,9 @@ h1,h2,h3,h4,h5 {
   font-weight: bold;
   font-family: 'kdg';
 }
+.header {
+  font-family: 'kdg' !important;
+}
 thead th {
   font-family: 'kdg';
   color: white;
