--- a/project/public/css/app.css
+++ b/project/public/css/app.css
@@ -11576,3 +11576,17 @@ table {
   margin-bottom: 0 !important;
 }
 
+.table_container {
+  position: relative;
+  min-height: 514px !important;
+  padding-bottom: 25px !important;
+}
+
+.page_btn_div {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin-top: 5px !important;
+}
+
