--- a/project/resources/sass/app.scss
+++ b/project/resources/sass/app.scss
@@ -122,3 +122,17 @@ thead th {
 table {
   margin-bottom: 0 !important;
 }
+
+.table_container {
+  position: relative;
+  min-height: 514px !important;
+  padding-bottom: 25px !important;
+}
+
+.page_btn_div {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin-top: 5px !important;
+}
