added warning to accounts older than 2 years

--- a/project/public/css/app.css
+++ b/project/public/css/app.css
@@ -11590,3 +11590,20 @@ table {
   margin-top: 5px !important;
 }
 
+table#overview .old,
+table#overview .old:hover {
+  background-color: #e3342f !important;
+}
+
+table#overview .old span {
+  display: inline-block !important;
+  float: right;
+  font-weight: bold;
+}
+
+table#overview .old span::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
